--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
     "postcss": "8.4.32",
+    "prettier": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
+  },
+  "devDependencies": {
+    "daisyui": "^4.4.19"
   }
 }
